nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "nginx-deployment"
  namespace: "2048-game" #using the same namespace
spec:
  selector:
    matchLabels:
      app: "nginx"
  replicas: 1 #
  template:
    metadata:
      labels:
        app: "nginx"
    spec:
      containers:
      - name: "nginx"
        image: nginx:1.14.2
        imagePullPloicy: Always
        ports:
        - containerPort: 80
